fix fab alignment

--- a/src/app/components/core/header/header.component.scss
+++ b/src/app/components/core/header/header.component.scss
@@ -18,7 +18,7 @@
   height: 56px;
   width: 56px; 
   .mat-icon-overlay {
-    transform: translateY(10px);
+    transform: translateY(12px);
     vertical-align: middle
   }
 }
